--- a/targetPractice.html
+++ b/targetPractice.html
@@ -10,7 +10,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <script>
+        $(document).ready(function(){
+            $("div").hide();
 
+        });
     </script>
 
 </head>
@@ -19,7 +22,7 @@
 
     <div class="row">
         <div class="col-12">
-            <p id="myText">My text to target.</p>
+            <p id="myText2">My text to target.</p>
 
             <hr>
             <p class="additionalText">More text to target.</p>
